<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Atividades.locationActivity">


    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frameDetailsOverImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/layoutDetails"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:adjustViewBounds="true"
                    android:contentDescription="@string/artist"
                    android:src="@drawable/location" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_bg">


                </FrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left">


                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/loading"
                        android:textColor="#FAFAFA"
                        android:textSize="34sp"
                        app:layout_constraintBottom_toTopOf="@id/chipFavorite"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipFavorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#1D3981"
                        android:checkable="true"
                        android:text="@string/follow"
                        android:textColor="@color/purple_700"
                        app:checkedIcon="@drawable/ic_baseline_favorite_24"
                        app:checkedIconTint="#D52E2E"
                        app:chipBackgroundColor="@color/purple_200"
                        app:chipIcon="@drawable/ic_outline_favorite_border_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewName" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </FrameLayout>


            <LinearLayout
                android:id="@+id/layoutDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameDetailsOverImage">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/frameDetailsOverImage">

                    <TextView
                        android:id="@+id/textViewEventsHappeningIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/events_near_city"
                        android:textSize="28sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewEventsNear"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </LinearLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:contentDescription="@string/app_name"
        android:onClick="goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
</androidx.constraintlayout.widget.ConstraintLayout>